--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -3,9 +3,9 @@
     justify-content: space-between;
     max-width: 1280px;
     align-items: center;
-    padding-bottom: 24px;
-    margin-top: 24px;
+    padding: 24px 0;
     gap: 8px;
+    border-bottom: 1px solid #D7DDE9;
 
     h1 {
         font-size: 24px;
@@ -18,5 +18,13 @@
         line-height: 20px;
         font-weight: 400;
         color: #0000008A;
+    }
+
+    @media (max-width: 900px) {
+        flex-direction: column;
+
+        span, h1, div {
+            align-self: flex-start;
+        }
     }
 }
