--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -166,4 +166,8 @@ a.secondary {
     margin: 0 auto;
     max-width: 1280px;
     padding: 0 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
