--- a/src/components/header/index.module.scss
+++ b/src/components/header/index.module.scss
@@ -1,5 +1,6 @@
 .container {
     display: flex;
+    width: 100%;
     justify-content: space-between;
     max-width: 1280px;
     align-items: center;
