--- a/src/components/task-card/index.module.scss
+++ b/src/components/task-card/index.module.scss
@@ -15,6 +15,10 @@
         color: #0000008A;
         text-align: center;
     }
+
+    @media (max-width: 600px) {
+        max-width: 100%;
+    }
 }
 
 .list {
