--- a/src/components/task-card/index.module.scss
+++ b/src/components/task-card/index.module.scss
@@ -7,6 +7,7 @@
     gap: 24px;
     border: 1px solid #EAECF0;
     border-radius: 16px;
+    min-height: 500px;
 
     h3 {
         font-size: 16px;
@@ -25,4 +26,12 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+}
+
+.empty {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+    color: #0000008A;
+    text-align: center;
 }
