--- a/src/components/task-card/new-task-modal/index.module.scss
+++ b/src/components/task-card/new-task-modal/index.module.scss
@@ -31,6 +31,35 @@
   }
 }
 
+.input {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    input {
+      border: 1px solid #D7DDE9;
+      border-radius: 8px;
+      padding: 16px;
+      font-size: 16px;
+      width: 100%;
+
+      &::placeholder {
+        color: #0000008F;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 20px;
+      }
+    }
+
+    label {
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 20px;
+      color: #000000;
+    }
+}
+
+
 .actions {
     display: flex;
     gap: 16px;
