--- a/src/components/task-card/new-task-modal/index.module.scss
+++ b/src/components/task-card/new-task-modal/index.module.scss
@@ -30,6 +30,12 @@
     color: #000000;
   }
 
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+  }
+
   @media (max-width: 768px) {
     width: 100%;
     height: 100%;
